Final Version with accounts functions from customer
